<resources>
    <string name="app_name">Easy Home Expenses!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <string name="expense_name">Name</string>
    <string name="expense_money">0.0</string>
    <string name="expense_date">Date</string>
    <string name="save">Save</string>
    <string name="expense_owner">Pagador</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="offline_list">Offline expenseList</string>
    <string name="online_list">Online expenseList</string>

    <string name="create_new_offline_list">Create new offline expenseList</string>
    <string name="title_activity_expenses">ExpensesActivity</string>

    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>

    <string name="period_start_end">Period start/end</string>
    <string name="you">You</string>

</resources>
